--- a/Navigation/package.json
+++ b/Navigation/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "retro-rabbit-claims",
-  "version": "0.0.0",
-  "description": "No description",
-  "author": null,
+  "name": "Capstone",
+  "version": "0.0.1",
   "private": true,
-  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
   "dependencies": {
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-paper": "2.2.8",
-    "react-native-sqlite-storage": "3.3.10",
-    "react-navigation": "3.9.1",
-    "tcomb-form-native": "0.6.20"
+    "react": "16.8.3",
+    "react-native": "0.59.5",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-navigation": "^3.9.1"
+  },
+  "devDependencies": {
+    "@babel/core": "7.4.4",
+    "@babel/runtime": "7.4.4",
+    "babel-jest": "24.7.1",
+    "jest": "24.7.1",
+    "metro-react-native-babel-preset": "0.54.0",
+    "react-test-renderer": "16.8.3"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
