--- a/OCR/package.json
+++ b/OCR/package.json
@@ -10,7 +10,11 @@
     "react": "16.8.3",
     "react-native": "0.59.5",
     "react-native-camera": "^2.6.0",
-    "react-native-text-detector": "0.0.6"
+    "react-native-fs": "^2.13.3",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-navigation": "^2.20.0",
+    "react-native-text-detector": "0.0.6",
+    "react-navigation": "^3.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
