--- a/Navigation/package.json
+++ b/Navigation/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "^2.12.1",
     "react": "16.8.3",
-    "react-native": "0.59.5",
+    "react-native": "^0.60.0",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-lightbox": "^0.8.0",
     "react-navigation": "^3.9.1"
   },
   "devDependencies": {
